{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 93,
  "lineage": "8ee19a85-e192-1d69-9b52-b288629e11b3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "my_elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:210751093751:loadbalancer/My-ELB",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "My-ELB-1965780707.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 20,
                "target": "TCP:80",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "My-ELB",
            "idle_timeout": 60,
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "My-ELB",
            "security_groups": [
              "sg-01ccab76f0e69d68d"
            ],
            "source_security_group": "210751093751/SG_for_ELB",
            "source_security_group_id": "sg-01ccab76f0e69d68d",
            "subnets": [
              "subnet-0036c079a2c816c6b",
              "subnet-0ac199e3744a3984e"
            ],
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.SG_for_ELB",
            "aws_subnet.subnet_az_1",
            "aws_subnet.subnet_az_2",
            "aws_vpc.crud_vpc",
            "data.aws_availability_zones.avail"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "mygw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210751093751:internet-gateway/igw-0528d2eafcd8da45b",
            "id": "igw-0528d2eafcd8da45b",
            "owner_id": "210751093751",
            "tags": {
              "Name": "MyIG"
            },
            "tags_all": {
              "Name": "MyIG"
            },
            "vpc_id": "vpc-0b04c113a8957ecf8"
          },
          "dependencies": [
            "aws_vpc.crud_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route_to_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0528d2eafcd8da45b",
            "id": "r-rtb-0be8a3eef5cd0e7361080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0be8a3eef5cd0e736",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.mygw",
            "aws_vpc.crud_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "crud_rt_az_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0506e2406620a3b27",
            "route_table_id": "rtb-0be8a3eef5cd0e736",
            "subnet_id": "subnet-0ac199e3744a3984e"
          },
          "dependencies": [
            "aws_subnet.subnet_az_1",
            "aws_vpc.crud_vpc",
            "data.aws_availability_zones.avail"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "crud_rt_az_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e93245078090022",
            "route_table_id": "rtb-0be8a3eef5cd0e736",
            "subnet_id": "subnet-0036c079a2c816c6b"
          },
          "dependencies": [
            "aws_subnet.subnet_az_2",
            "aws_vpc.crud_vpc",
            "data.aws_availability_zones.avail"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG_for_EC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210751093751:security-group/sg-07f3732f2f4ccf94f",
            "description": "Allow traffic for EC2 from ELB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07f3732f2f4ccf94f",
            "ingress": [
              {
                "cidr_blocks": [
                  "178.150.20.173/32"
                ],
                "description": "SSH from my IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow inbound traffic on the 80 port from ELB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01ccab76f0e69d68d"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "SG_for_EC2",
            "name_prefix": "",
            "owner_id": "210751093751",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b04c113a8957ecf8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.SG_for_ELB",
            "aws_vpc.crud_vpc",
            "data.http.myip"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG_for_EFS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210751093751:security-group/sg-0b3f6969867dffcae",
            "description": "Allow NFS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b3f6969867dffcae",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "NFS from EC2",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07f3732f2f4ccf94f"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "SG_for_EFS",
            "name_prefix": "",
            "owner_id": "210751093751",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b04c113a8957ecf8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.SG_for_EC2",
            "aws_security_group.SG_for_ELB",
            "aws_vpc.crud_vpc",
            "data.http.myip"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG_for_ELB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210751093751:security-group/sg-01ccab76f0e69d68d",
            "description": "Allow 80 port inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01ccab76f0e69d68d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "SG_for_ELB",
            "name_prefix": "",
            "owner_id": "210751093751",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b04c113a8957ecf8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.crud_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG_for_RDS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210751093751:security-group/sg-04b63eec4af50d449",
            "description": "Allow MySQL inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04b63eec4af50d449",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "RDS from EC2",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07f3732f2f4ccf94f"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "SG_for_RDS",
            "name_prefix": "",
            "owner_id": "210751093751",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b04c113a8957ecf8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.SG_for_EC2",
            "aws_security_group.SG_for_ELB",
            "aws_vpc.crud_vpc",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_az_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210751093751:subnet/subnet-0ac199e3744a3984e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ac199e3744a3984e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "210751093751",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-east-1a"
            },
            "tags_all": {
              "Name": "us-east-1a"
            },
            "vpc_id": "vpc-0b04c113a8957ecf8"
          },
          "dependencies": [
            "aws_vpc.crud_vpc",
            "data.aws_availability_zones.avail"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_az_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210751093751:subnet/subnet-0036c079a2c816c6b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0036c079a2c816c6b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "210751093751",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "us-east-1b"
            },
            "tags_all": {
              "Name": "us-east-1b"
            },
            "vpc_id": "vpc-0b04c113a8957ecf8"
          },
          "dependencies": [
            "aws_vpc.crud_vpc",
            "data.aws_availability_zones.avail"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "crud_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:210751093751:vpc/vpc-0b04c113a8957ecf8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e7871b03db284868",
            "default_route_table_id": "rtb-0be8a3eef5cd0e736",
            "default_security_group_id": "sg-07574d1ea31bd29f6",
            "dhcp_options_id": "dopt-0b984df6e865f6c85",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b04c113a8957ecf8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0be8a3eef5cd0e736",
            "owner_id": "210751093751",
            "tags": {
              "Name": "crud_vpc"
            },
            "tags_all": {
              "Name": "crud_vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}